--- a/index.html
+++ b/index.html
@@ -3,23 +3,21 @@
         <link rel="stylesheet" href="style.css"/>
     </head>
     <body>
-        <header>
-                <img src="https://tickikids.ams3.cdn.digitaloceanspaces.com/z1.cache/cities/5/logo_ua_5aa7f07da5ba36.24148434.jpg" alt="">
-        <nav>
-                <a data-w-id="a7038e09-b2db-553b-584c-5c6981818f05" href="/forms/home-form" target="_blank" class="button__primary header w-button" style="">Розваги</a>
-                <a data-w-id="a7038e09-b2db-553b-584c-5c6981818f05" href="/forms/home-form" target="_blank" class="button__primary header w-button" style="">Допомога</a>
-                <a data-w-id="a7038e09-b2db-553b-584c-5c6981818f05" href="/forms/home-form" target="_blank" class="button__primary header w-button" style="">Освіта</a>
-                <a data-w-id="a7038e09-b2db-553b-584c-5c6981818f05" href="/forms/home-form" target="_blank" class="button__primary header w-button" style="">Заклади</a>
-                <a data-w-id="a7038e09-b2db-553b-584c-5c6981818f05" href="/forms/home-form" target="_blank" class="button__primary header w-button" style="">Табори</a>
-                <a data-w-id="a7038e09-b2db-553b-584c-5c6981818f05" href="/forms/home-form" target="_blank" class="button__primary header w-button" style="">Афіша</a>
-                <a data-w-id="a7038e09-b2db-553b-584c-5c6981818f05" href="/forms/home-form" target="_blank" class="button__primary header w-button" style="">Блох</a>
-                <a data-w-id="a7038e09-b2db-553b-584c-5c6981818f05" href="/forms/home-form" target="_blank" class="button__primary header w-button" style="">Заходи</a>
-          </nav>
+         <header>
+            <nav>
+                <a href="/" aria-current="page" class="header__logo-wrapper w-nav-brand w--current" aria-label="home"><img src="https://tickikids.ams3.cdn.digitaloceanspaces.com/z1.cache/cities/5/logo_ua_5aa7f07da5ba36.24148434.jpg" loading="lazy" alt="" class="header__img-logo"></a>
+            <a data-w-id="a7038e09-b2db-553b-584c-5c6981818f05" href="/forms/home-form" target="_blank" class="button__primary header w-button" style="">Про школу</a>
+            <a data-w-id="a7038e09-b2db-553b-584c-5c6981818f05" href="/forms/home-form" target="_blank" class="button__primary header w-button" style="">Мови</a>
+            <a data-w-id="a7038e09-b2db-553b-584c-5c6981818f05" href="/forms/home-form" target="_blank" class="button__primary header w-button" style="">Викладачі</a>
+            <a data-w-id="a7038e09-b2db-553b-584c-5c6981818f05" href="/forms/home-form" target="_blank" class="button__primary header w-button" style="">Корпоративне навчання</a>
+            <a data-w-id="a7038e09-b2db-553b-584c-5c6981818f05" href="/forms/home-form" target="_blank" class="button__primary header w-button" style="">Викладачам</a>
+            <a data-w-id="a7038e09-b2db-553b-584c-5c6981818f05" href="/forms/home-form" target="_blank" class="button__primary header w-button" style="">Контакти</a>
+            <a data-w-id="a7038e09-b2db-553b-584c-5c6981818f05" href="/forms/home-form" target="_blank" class="button__primary header w-button" style="">Залишити заявку</a>
+        </nav>
           </header>
           <main>
           <h1>НАЙБІЛЬША МІЖНАРОДНА ШКОЛА ПРОГРАМУВАННЯ ДЛЯ ДІТЕЙ 7-17 РОКІВ "LOGIKA"</h1>
         <img src="https://tickikids.ams3.cdn.digitaloceanspaces.com/z1.cache/gallery/organizations/5636/image_61767bcf17da03.49622653.jpg" width="690px" height="390px"/>
-     </footer>
         </main>
     </body>
 </html>
