--- a/index.html
+++ b/index.html
@@ -18,6 +18,50 @@
           <main>
           <h1>НАЙБІЛЬША МІЖНАРОДНА ШКОЛА ПРОГРАМУВАННЯ ДЛЯ ДІТЕЙ 7-17 РОКІВ "LOGIKA"</h1>
         <img src="https://tickikids.ams3.cdn.digitaloceanspaces.com/z1.cache/gallery/organizations/5636/image_61767bcf17da03.49622653.jpg" width="690px" height="390px"/>
+     <span style="font-family:Garamond,times,serif; colir green" class="wixui-rich-text__text"><h2>Logika — найбільша міжнародна школа програмування для дітей від 7 до 17 років.</h2></span>
+        <p>Програмування — найперспективніший навик XXI століття. Ми допомагаємо дітям зробити перший крок у світ IT, навчаючи з нуля. Учні отримують нові знання в ігровій формі та займаються на професійно-розробленії платформі для навчання.</p>
+<h3>Постійна підтримка</h3>
+ <p>У Logika працюють досвідчені викладачі-практики, які супроводжують та підтримують дітей протягом навчання. Доступно пояснюють теорію, направляють у створенні власних проєктів, перевіряють та дають зворотній зв'язок по домашньому завданні, постійно звітують батькам про успіхи дитини.</p>
+ <h3>Власна методика</h3>
+ <p>Програми курсів розробляє команда з 30 професійних методистів із педагогічним і психологічним бекграундом. Ми регулярно оновлюємо існуючі курси, враховуючи нові тренди в IT та освіті дітей.</p>
+ <h3>Ігровий формат навчання</h3>
+ <p>У навчальну платформу вбудована гейміфікація і персонажі, а всі курси будуються на основі своєї сюжетної лінії. Діти молодшого віку запускають роботів на Марс і рятують принцес, а підлітки виконують реальні замовлення і просуваються по кар'єрних сходах в IT-компанії.</p>
+ <h3>Проєктний підхід</h3>
+ <p>Діти вже в процесі навчання створюють власні проєкти — мультфільми, ігри, сайти і додатки. Кожен модуль курсу закінчується захистом проєкту перед одногрупниками і батьками. В кінці курсу у дитини буде портфоліо більш ніж з 10 власних проєктів.</p>
+ <h3>Розвиток навичок майбутнього</h3>
+ <p>Діти вчаться не тільки кодити, а й вигадувати ідеї для проєкту, шукати і перевіряти інформацію, розподіляти завдання і презентувати свою роботу перед аудиторією.</p>
+ <p>Креативність, логіка і критичне мислення, командна робота і публічні виступи — це навички, з якими простіше вчитися в школі, будувати плани на майбутнє і досягати поставлених цілей.</p>
+ <ul>
+ <h3>Що таке курс програмування від Logika?</h3>
+ <li>1-2 роки навчання (в залежності від курсу)</li>
+ <li>уроки по вихідним в одній із 15 шкіл у Києві</li>
+ <li>1,5-годинні заняття з викладачем 1 раз на тиждень</li>
+ <li>24/7 доступ до навчальної платформи для проходження завдань на задану тему</li>
+ <li>міні-групи до 12 осіб</li>
+ <li>батьки мають змогу стежити за успіхом дитини</li>
+ </ul>
+ <p>Запишіть дитину на пробний безкоштовний урок, де вона напише свій перший код та захоче стати програмістом!</p>
+ <iframe width="853" height="480" src="https://www.youtube.com/embed/e30tRHsgPv0" title="Урок 1. Вступ до програмування. Основи Frontend" frameborder="0"></iframe>
+ <section class="principles">
+                <article class="principle">
+<h2>Контакти</h2>
+<p>+380 (93) 170 74 40kiev@logikaschool.com</p>
+                </article>
+ </section>
+<h2>Посилання</h2>
+<p>https://logikaschool.com/</p>
+<p>https://www.facebook.com/logika.it.school</p>
+<p>http://instagram.com/logika_it_school</p>
+<p>https://www.youtube.com/channel/UCFIBb_OZ1TPuhcjZUhVbifg</p>
+          <footer>
+              <p><b><i>Контакти</i></b></p>
+            <p>Адреса: м.Техноград , вул. Зелена, 45</p>
+            <p>Тел.: 097-23-78-579</p>
+<br/>
+        </footer>
+        </main>
+    </body>
+</html>
         </main>
     </body>
 </html>
