--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
          <header>
             <nav>
             <a href="/" aria-current="page" class="header__logo-wrapper w-nav-brand w--current" aria-label="home"><img src="https://tickikids.ams3.cdn.digitaloceanspaces.com/z1.cache/cities/5/logo_ua_5aa7f07da5ba36.24148434.jpg" loading="lazy" alt="" class="header__img-logo"></a>
-            <a data-w-id="a7038e09-b2db-553b-584c-5c6981818f05" href="/forms/home-form" target="_blank" class="button__primary header w-button" style="">Про школу</a>
-            <a data-w-id="a7038e09-b2db-553b-584c-5c6981818f05" href="/forms/home-form" target="_blank" class="button__primary header w-button" style="">Мови</a>
-            <a data-w-id="a7038e09-b2db-553b-584c-5c6981818f05" href="/forms/home-form" target="_blank" class="button__primary header w-button" style="">Викладачі</a>
-            <a data-w-id="a7038e09-b2db-553b-584c-5c6981818f05" href="/forms/home-form" target="_blank" class="button__primary header w-button" style="">Корпоративне навчання</a>
-            <a data-w-id="a7038e09-b2db-553b-584c-5c6981818f05" href="/forms/home-form" target="_blank" class="button__primary header w-button" style="">Викладачам</a>
-            <a data-w-id="a7038e09-b2db-553b-584c-5c6981818f05" href="/forms/home-form" target="_blank" class="button__primary header w-button" style="">Контакти</a>
-            <a data-w-id="a7038e09-b2db-553b-584c-5c6981818f05" href="/forms/home-form" target="_blank" class="button__primary header w-button" style="">Залишити заявку</a>
+            <a data-w-id="a7038e09-b2db-553b-584c-5c6981818f05" href="https://uk.wikipedia.org/wiki/%D0%9A%D0%B0%D1%82%D0%B5%D0%B3%D0%BE%D1%80%D1%96%D1%8F:%D0%A0%D0%BE%D0%B7%D0%B2%D0%B0%D0%B3%D0%B8" target="_blank" class="button__primary header w-button" style="">Розваги</a>
+            <a data-w-id="a7038e09-b2db-553b-584c-5c6981818f05" href="https://diia.gov.ua/services/dopomoga-lyudini-z-invalidnistyu-z-ditinstva-ta-dityam-z-invalidnistyu" target="_blank" class="button__primary header w-button" style="">Допомога</a>
+            <a data-w-id="a7038e09-b2db-553b-584c-5c6981818f05" href="https://osvita.ua/" target="_blank" class="button__primary header w-button" style="">Освіта</a>
+            <a data-w-id="a7038e09-b2db-553b-584c-5c6981818f05" href="https://list.in.ua/%D0%A5%D0%BC%D0%B5%D0%BB%D1%8C%D0%BD%D0%B8%D1%86%D1%8C%D0%BA%D0%B8%D0%B9/%D0%97%D0%B0%D0%BA%D0%BB%D0%B0%D0%B4%D0%B8-%D1%85%D0%B0%D1%80%D1%87%D1%83%D0%B2%D0%B0%D0%BD%D0%BD%D1%8F" target="_blank" class="button__primary header w-button" style="">Заклади</a>
+            <a data-w-id="a7038e09-b2db-553b-584c-5c6981818f05" href="https://civilization-winter.supercamp.com.ua/?gad_source=1&gclid=CjwKCAiAu9yqBhBmEiwAHTx5pwNaHMncqohHMWWspiYM1rcVkL533ippYHFRdW1I8axk612ZxPFrVRoCHlwQAvD_BwE" target="_blank" class="button__primary header w-button" style="">Табори</a>
+            <a data-w-id="a7038e09-b2db-553b-584c-5c6981818f05" href="https://khmelnitsky.karabas.com/ua/?gad_source=1&gclid=CjwKCAiAu9yqBhBmEiwAHTx5p0FAdzyHZp6Xk4McMgWVLgXcGPFB3BaBadXPidMauzB6sxeTzzeUVhoCxKQQAvD_BwE" target="_blank" class="button__primary header w-button" style="">Афіша</a>
+            <a data-w-id="a7038e09-b2db-553b-584c-5c6981818f05" href="https://ru.wikipedia.org/wiki/%D0%91%D0%BB%D0%BE%D0%B3" target="_blank" class="button__primary header w-button" style="">Блох</a>
+            <a data-w-id="a7038e09-b2db-553b-584c-5c6981818f05" href="https://slovnyk.ua/index.php?swrd=%D0%B7%D0%B0%D1%85%D0%BE%D0%B4%D0%B8" target="_blank" class="button__primary header w-button" style="">Заходи</a>
         </nav>
           </header>
           <main>
